--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          architecture: ${{ matrix.architecture || 'x64' }}
+          architecture: ${{ matrix.architecture }}
 
       - name: Install Dependencies
         run: npm install
