--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 20
           architecture: ${{ matrix.architecture }}
-          cache: 'false'
+          cache: false
 
       - name: Install Dependencies
         run: npm install --arch=arm64
