--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm install
 
+      - name: build-linux
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run build:linux --arm64
+
       - name: release
         uses: softprops/action-gh-release@v2
         with:
