--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
         run: |
           docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm install
 
+      - name: npm install
+        run: npm install
+
       - name: build-linux
         run: npm run build:linux --arm64
 
