--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm i
 
       - name: build-linux
-        run: npm run build:linux --arm64
+        run: docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm run build:linux --arm64
 
       - name: release
         uses: softprops/action-gh-release@v2
