--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,14 +31,13 @@ jobs:
           docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm cache clean --force
           docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm i
 
-      - name: Install Ruby and fpm dependencies
+      - name: Build Docker image with Ruby and npm dependencies
         run: |
-            sudo apt-get update
-            sudo apt-get install -y ruby ruby-dev make gcc
-            sudo gem install --no-document fpm
+            docker build -t my-app-with-ruby .
 
       - name: build-linux
-        run: docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace node:latest npm run build:linux --arm64
+        run: docker run --platform linux/arm64 -v $PWD:/workspace -w /workspace my-app-with-ruby npm run build:linux --arm64
+
 
       - name: release
         uses: softprops/action-gh-release@v2
