--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux",
+    "build:linux": "npm run build && electron-builder --linux --arm64",
     "arm": "USE_SYSTEM_FPM=true electron-builder --config electron.config.json -l --arm64"
 
   },
