--- a/package.json
+++ b/package.json
@@ -19,7 +19,28 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux --arm64",
-    "arm": "USE_SYSTEM_FPM=true electron-builder --config electron.config.json -l --arm64"
+    "publish": "node publish",
+    "publish:win:setup:x64": "node build-config/build-pack.js target=win arch=x64 type=setup publish=always",
+    "publish:win:setup:x86": "node build-config/build-pack.js target=win arch=x86 type=setup publish=always",
+    "publish:win:setup:arm64": "node build-config/build-pack.js target=win arch=arm64 type=setup publish=always",
+    "publish:win:setup:x86_64": "node build-config/build-pack.js target=win arch=x86_64 type=setup publish=always",
+    "publish:win:portable": "npm run publish:win:portable:x86_64 && npm run publish:win:portable:x64 && npm run publish:win:portable:x86",
+    "publish:win:portable:x86_64": "node build-config/build-pack.js target=win arch=x86_64 type=portable publish=always",
+    "publish:win:portable:x64": "node build-config/build-pack.js target=win arch=x64 type=portable publish=always",
+    "publish:win:portable:x86": "node build-config/build-pack.js target=win arch=x86 type=portable publish=always",
+    "publish:win:7z:x64": "node build-config/build-pack.js target=win arch=x64 type=green publish=always",
+    "publish:win:7z:arm64": "node build-config/build-pack.js target=win arch=arm64 type=green publish=always",
+    "publish:win7:setup:x64": "node build-config/build-pack.js target=win arch=x64 type=win7_setup publish=always",
+    "publish:win7:7z:x64": "node build-config/build-pack.js target=win arch=x64 type=win7_green publish=always",
+    "publish:win7:7z:x86": "node build-config/build-pack.js target=win arch=x86 type=win7_green publish=always",
+    "publish:mac:dmg": "node build-config/build-pack.js target=mac arch=x64 type=dmg publish=always",
+    "publish:mac:dmg:arm64": "node build-config/build-pack.js target=mac arch=arm64 type=dmg publish=always",
+    "publish:linux:deb:amd64": "node build-config/build-pack.js target=linux arch=x64 type=deb publish=always",
+    "publish:linux:deb:arm64": "node build-config/build-pack.js target=linux arch=arm64 type=deb publish=always",
+    "publish:linux:deb:armv7l": "node build-config/build-pack.js target=linux arch=armv7l type=deb publish=always",
+    "publish:linux:appImage": "node build-config/build-pack.js target=linux arch=x64 type=appImage publish=always",
+    "publish:linux:rpm": "node build-config/build-pack.js target=linux arch=x64 type=rpm publish=always",
+    "publish:linux:pacman": "node build-config/build-pack.js target=linux arch=x64 type=pacman publish=always",
 
   },
   "dependencies": {
