--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BT_TOKEN: ${{ secrets.BT_TOKEN }}
 
-      - name: Generate file MD5
-        run: |
-          cd build
-          md5sum *.deb *.rpm *.pacman *.AppImage
+      - name: release
+        uses: softprops/action-gh-release@v2
+        with:
+            draft: true
+            files: |
+              dist/*.exe
+              dist/*.zip
+              dist/*.dmg
+              dist/*.AppImage
+              dist/*.snap
+              dist/*.deb
+              dist/*.rpm
+              dist/*.tar.gz
+              dist/*.yml
+              dist/*.blockmap
+              dist/*.apk
+        env:
+            GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
