--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "pdfjs-dist": "^4.10.38"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
