--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.3",
-    "pdfjs-dist": "^4.10.38"
+    "pdfjs-dist": "^4.10.38",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
