--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
+    "server": "node test.ts",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -27,6 +28,7 @@
     "axios": "^1.7.9",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.3",
+    "fs": "^0.0.1-security",
     "pdfjs-dist": "^4.10.38",
     "vue-router": "^4.5.0"
   },
