--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev | npm run server ",
+    "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -26,10 +26,13 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.9",
+    "docxtemplater": "^3.60.1",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.3",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "pdfjs-dist": "^4.10.38",
+    "pizzip": "^3.1.8",
     "tesseract.js": "^6.0.0",
     "vue-router": "^4.5.0"
   },
