完善导出文档功能

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "pdfjs-dist": "^4.10.38",
+    "pinyin-pro": "^3.26.0",
     "pizzip": "^3.1.8",
     "tesseract.js": "^6.0.0",
     "vue-router": "^4.5.0"
@@ -41,6 +42,7 @@
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rushstack/eslint-patch": "^1.10.3",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.8",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
