--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev | npm run server",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -30,7 +30,7 @@
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.3",
     "file-saver": "^2.0.5",
-    "fs": "^0.0.1-security",
+    "fs-extra": "^11.3.0",
     "pdfjs-dist": "^4.10.38",
     "pinyin-pro": "^3.26.0",
     "pizzip": "^3.1.8",
