支持表格数据替换

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev | npm run server",
+    "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -34,7 +34,6 @@
     "pdfjs-dist": "^4.10.38",
     "pinyin-pro": "^3.26.0",
     "pizzip": "^3.1.8",
-    "tesseract.js": "^6.0.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
