--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
-    "server": "node test.ts",
+    "server": "node test.js",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite preview",
+    "start": "electron-vite preview ",
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
@@ -26,14 +26,17 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "docxtemplater": "^3.60.1",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.9.3",
+    "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.3.0",
     "pdfjs-dist": "^4.10.38",
     "pinyin-pro": "^3.26.0",
     "pizzip": "^3.1.8",
+    "tesseract.js": "^6.0.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
