--- a/resources/setting/projects.json
+++ b/resources/setting/projects.json
@@ -1,1 +1,1 @@
-[]
+[{"projectName":"test3","path":"C:\\Users\\34058\\Downloads\\Lenovo 小新 潮7000-14ARR规格说明.pdf","lastOpenTime":"2025/3/5 17:03:16","remark":"23","projectCreatePerson":"223","createTime":"2025/3/5 17:03:16","latestEditors":"223","settingPath":"C:\\Users\\34058\\Downloads\\test2.json"},{"projectName":"test123","path":"C:\\Users\\34058\\Downloads\\Lenovo 小新 潮7000-14ARR规格说明.pdf","lastOpenTime":"2025/3/5 10:50:36","remark":"123","projectCreatePerson":"123","createTime":"2025/3/5 10:50:36","latestEditors":"123","settingPath":"C:\\Users\\34058\\Downloads\\test.json"}]
