文件地址不重复 项目导入异常 软件界面颜色 优先选地址，项目名默认文件名 词表功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "Codegeex.RepoIndex": true
+  "Codegeex.RepoIndex": true,
+  "cline.preferredLanguage": "Simplified Chinese - 简体中文"
 }
