--- a/resources/setting/projects.json
+++ b/resources/setting/projects.json
@@ -1,1 +1,1 @@
-[]
+[{"projectName":"9.服务类询价文件 - 2 供应商报价文件 包1","path":"C:\\Users\\34058\\Desktop\\报价\\9.服务类询价文件 - 2 供应商报价文件 包1.pdf","lastOpenTime":"2025/4/11 15:26:13","remark":"2","projectCreatePerson":"1","createTime":"2025/4/11 15:26:13","latestEditors":"1","settingPath":"C:\\Users\\34058\\Desktop\\报价\\9.服务类询价文件 - 2 供应商报价文件 包1.json"},{"projectName":"","path":"","lastOpenTime":"","remark":"","projectCreatePerson":"","createTime":"","latestEditors":"","settingPath":""}]
