--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "files": [],
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }],
   "compilerOptions": {
-    "types": ["electron-vite/node"]
+    "types": ["electron-vite/node"],
   }
 }
