1.修复列表太长的问题 2.增加导入此表功能 3.新增快捷键缩放功能 4.修复快捷键缩放功能BUG等问题

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rushstack/eslint-patch": "^1.10.3",
     "@types/file-saver": "^2.0.7",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.8",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
