修复逻辑问题

--- a/resources/setting/projects.json
+++ b/resources/setting/projects.json
@@ -1,1 +1,1 @@
-[]
+[{"projectName":"潘鹰宇 北京极智嘉科技股份有限公司招聘","path":"C:\\Users\\ThinkPad\\Desktop\\潘鹰宇 北京极智嘉科技股份有限公司招聘.pdf","lastOpenTime":"2025/4/15 16:48:31","remark":"","projectCreatePerson":"","createTime":"2025/4/15 16:48:31","latestEditors":"","settingPath":"C:\\Users\\ThinkPad\\Desktop\\潘鹰宇 北京极智嘉科技股份有限公司招聘.json"}]
